--- a/resources/scss/ceres/views/PageDesign/_search-box.scss
+++ b/resources/scss/ceres/views/PageDesign/_search-box.scss
@@ -1,21 +1,44 @@
+.top-bar {
+    .cmp-search-box {
+        position: relative;
+        top: auto; 
+        right: auto;
+        left: auto;
+        .search-box-inner {
+            margin: 5px 0;
+            @include media-breakpoint-down(md) {
+                margin: 5px 5px;
+            }
+        }
+    }
+}
+
 .cmp-search-box
 {
-    background-color: $gray-darker;
+    background-color: $top-bar-bg;
     z-index: 1070;
     position: fixed;
-    top: 30px;
+    top: 44px;
     right: 0;
     left: 0;
     width: 100%;
+    @include media-breakpoint-down(sm) {
+        top: 30px;
+    }
+    
     .search-box-inner
     {
         display: flex;
         flex-flow: row nowrap;
-        padding: 1rem 0em;
+        margin: 5px 15px;
         position: relative;
         max-width: 1200px;
         margin: 0 auto;
+        @include media-breakpoint-down(md) {
+			margin: 5px 5px;
+		}
     }
+    
     @at-root .search-box-shadow-frame
     {
         display: flex;
