--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -18150,7 +18150,7 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
 }
 
 .top-bar .search-shown .always-visible-search {
-  margin: 5px 5px;
+  margin: 5px;
   background-color: #fff;
   -ms-flex: 1;
       flex: 1;
