--- a/resources/scss/ceres/views/PageDesign/_search-box.scss
+++ b/resources/scss/ceres/views/PageDesign/_search-box.scss
@@ -1,3 +1,4 @@
+// Searchbar in widget
 .top-bar {
     .cmp-search-box {
         position: relative;
@@ -13,6 +14,7 @@
     }
 }
 
+// Searchbar in standard-header
 .cmp-search-box
 {
     background-color: $top-bar-bg;
