--- a/resources/scss/ceres/views/PageDesign/_search-box.scss
+++ b/resources/scss/ceres/views/PageDesign/_search-box.scss
@@ -15,18 +15,32 @@
 }
 
 // Searchbar in standard-header
+div:not(.top-bar) {
+    > .page-header {
+        > div {
+            > .cmp-search-box {
+                top: 30px;
+                z-index: 1070;
+                position: fixed;
+                right: 0;
+                left: 0;
+
+                @include media-breakpoint-up(lg) {
+                    .search-box-inner {
+                        margin: 5px auto;
+                        padding-left: 15px;
+                        padding-right: 15px;
+                    }
+                }
+            }
+        } 
+    }
+}
+
 .cmp-search-box
 {
     background-color: $top-bar-bg;
-    z-index: 1070;
-    position: fixed;
-    top: 44px;
-    right: 0;
-    left: 0;
     width: 100%;
-    @include media-breakpoint-down(sm) {
-        top: 30px;
-    }
     
     .search-box-inner
     {
