--- a/resources/views/Containers/Partials/ItemLists/ItemList.twig
+++ b/resources/views/Containers/Partials/ItemLists/ItemList.twig
@@ -41,7 +41,8 @@
                     <template slot="items">
                         <category-item
                             :item-data="{{ item.data | json_encode }}"
-                            :decimal-count="{{ ceresConfig.item.storeSpecial }}">
+                            :decimal-count="{{ ceresConfig.item.storeSpecial }}"
+                            :disable-carousel-on-mobile="true">
                             <template slot="BeforePrices">{{ LayoutContainer.show("Ceres::CategoryItem.BeforePrices", item.data) }}</template>
                             <template slot="AfterPrices">{{ LayoutContainer.show("Ceres::CategoryItem.AfterPrices", item.data) }}</template>
                         </category-item>
