--- a/resources/views/Widgets/Common/ItemListWidget.twig
+++ b/resources/views/Widgets/Common/ItemListWidget.twig
@@ -84,7 +84,8 @@
                         <template slot="items">
                             <category-item
                                 :item-data="{{ Twig.print("item.data | json_encode") }}"
-                                :decimal-count="{{ Twig.print("ceresConfig.item.storeSpecial") }}">
+                                :decimal-count="{{ Twig.print("ceresConfig.item.storeSpecial") }}"
+                                :disable-carousel-on-mobile="{{ Twig.print("itemList.documents | length") }} > {{ itemsPerPage }}">
                                 <template slot="BeforePrices">
                                     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::CategoryItem.BeforePrices", Twig.var("item.data")])) }}
                                 </template>
