--- a/resources/views/Homepage/Homepage.twig
+++ b/resources/views/Homepage/Homepage.twig
@@ -24,14 +24,18 @@
 
 {% block PageBody %}
 
+
     {% if ceresConfig.homepage.showShopBuilderContent or request.get('isContentBuilder') == 1 %}
+    {{ component( "Ceres::Checkout.Components.Checkout" ) }}
 
         <div class="home container-max">
             <div class="row">
                 <div class="col">
-                    {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
-                        {{ content.result|raw }}
-                    {% endfor %}
+                    <checkout v-cloak template="#vue-checkout" :initial-checkout="{{ services.checkout.getCheckout() | json_encode() }}">
+                        {% for content in container("Ceres::Homepage") if content.plugin == "Plenty" %}
+                            {{ content.result|raw }}
+                        {% endfor %}
+                    </chekcout>
                 </div>
             </div>
         </div>
