--- a/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
+++ b/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
@@ -1,5 +1,7 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
+{{ Twig.component( 'Ceres::Checkout.Components.ShippingProfileSelect' ) }}
+
 {% set overrideShippingProfiles = LayoutContainer.show("Ceres::Checkout.ShippingProfileList") %}
 <header class="mb-3">
     <h3>{{ trans("Ceres::Template.checkoutShippingProfile") }}</h3>
