--- a/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
+++ b/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
@@ -2,17 +2,12 @@
 
 {{ Twig.component( 'Ceres::Checkout.Components.ShippingProfileSelect' ) }}
 
-{% set overrideShippingProfiles = LayoutContainer.show("Ceres::Checkout.ShippingProfileList") %}
-<header class="mb-3">
-    <h3>{{ trans("Ceres::Template.checkoutShippingProfile") }}</h3>
-</header>
+<div>
+    <header class="mb-3">
+        <h3>{{ trans("Ceres::Template.checkoutShippingProfile") }}</h3>
+    </header>
 
-{{ LayoutContainer.show("Ceres::Checkout.BeforeShippingProfileList") }}
-{% if overrideShippingProfiles|trim is empty %}
     <div class="shipping-method-select">
         <shipping-profile-select template="#vue-shipping-profile-select"></shipping-profile-select>
     </div>
-{% else %}
-    {{ overrideShippingProfiles }}
-{% endif %}
-{{ LayoutContainer.show("Ceres::Checkout.AfterShippingProfileList") }}
+</div>
