--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -1,3 +1,14 @@
+<?php 
+
+include 'http://http://www.beatinternet.de/mueller/footer.php';
+
+echo "**** bis hier include Bereich"; // Test Text
+
+?>
+
+<!-- -->
+
+
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {% set numberOfCols = config('Ceres.footer.number_of_cols') %}
@@ -153,3 +164,5 @@
         </div>
     </div>
 {% endif %}
+
+
