--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -14,7 +14,7 @@
 <div class="footer">
 
 
-<div class="container">
+<div class="container" style="align:center;" >
   
   <div class="row">
     <div class="col">
