--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -14,32 +14,6 @@
 <div class="footer">
 
 
-<div class="container" style="align:center;" >
-  
-  <div class="row">
-    <div class="col">
-    3
-    </div>
-    <div class="col">
-      3
-    </div>
-    <div class="col-6">
-      6
-    </div>
-  </div>
-</div>
-
- <div class="row">
-    <div class="col">
-    links
-    </div>
-    <div class="col">
-   rechts
-    </div>
-   
-  </div>
-</div>
- 
  
     <div class="{% if topButtonPosition == "right" %}back-to-top{% else %}back-to-top-center{% endif %} hidden-sm-down">
         <i class="fa fa-chevron-up"></i>
@@ -50,23 +24,23 @@
     </div>
 
     {% if numberOfFeatures > 0 %}
-        <div class="footer-features p-y-1 container-max">
+        <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
-                    <div class="col-xs-12 col-sm-4 text-xs-center">
+                    <div class="col-xs-12 col-sm-3 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       Alles auf Lager
+                       Adresse
                     </div>
-                     <div class="col-xs-12 col-sm-4 text-xs-center">
+                     <div class="col-xs-12 col-sm-3 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       Schnelle Lieferung
+                       Menü
                     </div>
-                     <div class="col-xs-12 col-sm-4 text-xs-center">
+                     <div class="col-xs-12 col-sm-6 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       24 Stunden Verfügbarkeit
+                       Newsletter
                     </div>
                
             </div>
