--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -30,12 +30,36 @@
                     <div class="col-xs-12 col-sm-3 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       Adresse
+                      <img scr="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg"><br>
+                      Jürgen Müller e.k.<br>
+MB-MÜLLER<br>
+Schmuck und Textil Großhandel<br>
+<br><br>
+Wernher-von-Braun-Straße 5-7<br>
+69214 Eppelheim<br>
+Deutschland ( Germany )<br>
+Tel.: +49 (0) 6221 33937-0<br>
+Fax: +49 (0) 6221 33937-59<br>
+mail: info@mb-mueller.com<br>
+
                     </div>
                      <div class="col-xs-12 col-sm-3 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       Menü
+                         {% autoescape false %}
+                    <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.footerCancellationRight", {"hyphen": "&shy;"}) }}</a>
+                    {% if config("Ceres.footer.cancellation_use_pdf") == "true" %}
+                        <a href="{{ config('Ceres.footer.cancellation_pdf_path') }}" target="_blank">{{ trans("Ceres::Template.footerCancellationForm", {"hyphen": "&shy;"}) }}</a>
+                    {% else %}
+                        <a href="{{ urls.cancellationForm }}">{{ trans("Ceres::Template.footerCancellationForm", {"hyphen": "&shy;"}) }}</a>
+                    {% endif %}
+                    <a href="{{ urls.legalDisclosure }}">{{ trans("Ceres::Template.footerLegalDisclosure") }}</a>
+                    <a href="{{ urls.privacyPolicy }}">{{ trans("Ceres::Template.footerPrivacyPolicy", {"hyphen": "&shy;"}) }}</a>
+                    <a href="{{ urls.gtc }}">{{ trans("Ceres::Template.footerGtc") }}</a>
+                    {% if config("Ceres.contact.shop_mail") | length > 0 and config("Ceres.contact.shop_mail") != "your@email.com" %}
+                        <a href="{{ urls.contact }}">{{ trans("Ceres::Template.footerContact") }}</a>
+                    {% endif %}
+                {% endautoescape %}
                     </div>
                      <div class="col-xs-12 col-sm-6 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
