pic footer align

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -27,10 +27,9 @@
         <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
-                    <div class="col-xs-12 col-sm-3 text-xs-center">
-                        <i class="fa fa-check text-success" aria-hidden="true"></i>
+                    <div class="col-xs-12 col-sm-3 text-xs-center" style="text-align:left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                      <img scr="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg"><br>
+                      <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg"><br>
                       Jürgen Müller e.k.<br>
 MB-MÜLLER<br>
 Schmuck und Textil Großhandel<br>
