--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -28,8 +28,8 @@
             <div class="row">
                
                     <div class="col-xs-12 col-sm-3 text-xs-center" style="text-align:left;">
-                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                      <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg"><br>
+                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} --><div style="text-align: left;">
+                      <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg" width="100px"><br>
                       Jürgen Müller e.k.<br>
 MB-MÜLLER<br>
 Schmuck und Textil Großhandel<br>
@@ -40,7 +40,7 @@ Deutschland ( Germany )<br>
 Tel.: +49 (0) 6221 33937-0<br>
 Fax: +49 (0) 6221 33937-59<br>
 mail: info@mb-mueller.com<br>
-
+</div>
                     </div>
                      <div class="col-xs-12 col-sm-3 text-xs-center">
                         <i class="fa fa-check text-success" aria-hidden="true"></i>
