--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -73,13 +73,12 @@ mail: info@mb-mueller.com<br>
             <div class="row">
                
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:left;">
-                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} --><div style="text-align: left;"> Copyright MB-Müller 2019
-    </div>
+                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
+                       <div style="text-align: left;"> Copyright MB-Müller 2019</div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:left;">
-                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} --><div style="text-align: left;"> 
-                       PAYMENTS
-                    </div>
+                    <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:right;">
+                       <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
+                       <div style="text-align: left;">PAYMENTS</div>
                    </div>
             </div>
         </div>     
