--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -68,13 +68,13 @@ mail: info@mb-mueller.com<br>
                
             </div>
         </div>
-        <br>
+      
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       <div style="text-align: left;"> Copyright MB-Müller 2019</div>
+                       <div style="text-align: left;"><b>Copyright MB-Müller 2019</b></div>
                     </div>
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:right;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
