--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -30,9 +30,7 @@
                     <div class="col-xs-12 col-sm-3 text-xs-center" style="text-align:left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} --><div style="text-align: left;">
                       <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg" width="100px"><br>
-                      Jürgen Müller e.k.<br>
-MB-MÜLLER<br>
-Schmuck und Textil Großhandel<br>
+
 <br><br>
 Wernher-von-Braun-Straße 5-7<br>
 69214 Eppelheim<br>
@@ -78,7 +76,7 @@ mail: info@mb-mueller.com<br>
                     </div>
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:right;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       <div style="text-align: left;">PAYMENTS</div>
+                       <div style="text-align: left;"><img src="http://www.beatinternet.de/mueller/img/paypal.png"></div>
                    </div>
             </div>
         </div>     
