--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -32,9 +32,11 @@
                       <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg" width="100px"><br>
 
 <br><br>
+<img src="http://www.beatinternet.de/mueller/img/web.png">
 Wernher-von-Braun-Straße 5-7<br>
 69214 Eppelheim<br>
 Deutschland ( Germany )<br>
+<img src="http://www.beatinternet.de/mueller/img/phone.png">
 Tel.: +49 (0) 6221 33937-0<br>
 Fax: +49 (0) 6221 33937-59<br>
 mail: info@mb-mueller.com<br>
@@ -81,7 +83,12 @@ mail: info@mb-mueller.com<br>
                     </div>
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:right;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       <div style="text-align: left;"><img src="http://www.beatinternet.de/mueller/img/paypal.png"></div>
+                       <div style="text-align: left;">
+		       <img src="http://www.beatinternet.de/mueller/img/paypal.png">
+		       <img src="http://www.beatinternet.de/mueller/img/master.png">
+		       <img src="http://www.beatinternet.de/mueller/img/visa.png">
+		       <img src="http://www.beatinternet.de/mueller/img/am.png">
+		       </div>
                    </div>
             </div>
         </div>     
