--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -61,14 +61,18 @@ mail: info@mb-mueller.com<br>
                 {% endautoescape %}</div>
                     </div>
                      <div class="col-xs-12 col-sm-6 text-xs-center">
-                     
+                      <div style="text-align: left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                      <h3>  Newsletter </h3> <br><br>
                      
-                     <form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
-	<input name="name" type="text" value="Frank" /> <br /> 
+                     <form accept-charset="UTF-8" action="#" autocomplete="off" method="GET" target="_blank">
+	<input name="name" type="text" value="E-Mail" /> <br /> 
 </form>
 
+<br><br>
+<img src="http://www.beatinternet.de/mueller/img/facebook.png"> <img src="http://www.beatinternet.de/mueller/img/twitter.png">
+
+/div>
                     </div>
                
             </div>
@@ -81,7 +85,7 @@ mail: info@mb-mueller.com<br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                        <div style="text-align: left;"><b>Copyright MB-Müller 2019</b></div>
                     </div>
-                    <div class="col-xs-12 col-sm-6 text-xs-center" style="text-align:right;">
+                    <div class="col-xs-12 col-sm-6 text-xs-center" style="align-items:right;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                        <div style="text-align: left;">
 		       <img src="http://www.beatinternet.de/mueller/img/paypal.png">
