--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -78,6 +78,8 @@ mail: info@mb-mueller.com<br>
             </div>
         </div>
       
+      <div style="height:2px;">
+         </div>
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
@@ -88,10 +90,10 @@ mail: info@mb-mueller.com<br>
                     <div class="col-xs-12 col-sm-6 text-xs-center" style="align-items:right;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                        <div style="text-align: left;">
-		       <img src="http://www.beatinternet.de/mueller/img/paypal.png">
-		       <img src="http://www.beatinternet.de/mueller/img/master.png">
-		       <img src="http://www.beatinternet.de/mueller/img/visa.png">
-		       <img src="http://www.beatinternet.de/mueller/img/am.png">
+		       <img src="http://www.beatinternet.de/mueller/img/paypal.png">  
+		       <img src="http://www.beatinternet.de/mueller/img/master.png">  
+		       <img src="http://www.beatinternet.de/mueller/img/visa.png">  
+		       <img src="http://www.beatinternet.de/mueller/img/am.png">  
 		       </div>
                    </div>
             </div>
