--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -72,14 +72,13 @@ mail: info@mb-mueller.com<br>
 <br><br>
 <img src="http://www.beatinternet.de/mueller/img/facebook.png"> <img src="http://www.beatinternet.de/mueller/img/twitter.png">
 
-/div>
+</div>
                     </div>
                
             </div>
         </div>
-      
-      <div style="height:2px;">
-         </div>
+      <div style="2px;"></div>
+ 
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
