--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -32,25 +32,23 @@
                       <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg" width="100px"><br>
 
 <br><br>
-<img src="http://www.beatinternet.de/mueller/img/web.png">
 Wernher-von-Braun-Straße 5-7<br>
 69214 Eppelheim<br>
 Deutschland ( Germany )<br>
-<img src="http://www.beatinternet.de/mueller/img/phone.png">
 Tel.: +49 (0) 6221 33937-0<br>
 Fax: +49 (0) 6221 33937-59<br>
 mail: info@mb-mueller.com<br>
 </div>
                     </div>
                      <div class="col-xs-12 col-sm-4 text-xs-center">
-                      <div style="text-align: left;"><br><br><br>
+                      <div style="text-align: left;"><br><br><br><br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                          {% autoescape false %}
                     <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.footerCancellationRight", {"hyphen": "&shy;"}) }}</a>
                     {% if config("Ceres.footer.cancellation_use_pdf") == "true" %}
                         <a href="{{ config('Ceres.footer.cancellation_pdf_path') }}" target="_blank">{{ trans("Ceres::Template.footerCancellationForm", {"hyphen": "&shy;"}) }}</a>
                     {% else %}
-                       <br> <br> <a href="{{ urls.cancellationForm }}">{{ trans("Ceres::Template.footerCancellationForm", {"hyphen": "&shy;"}) }}</a>
+                       <br><a href="{{ urls.cancellationForm }}">{{ trans("Ceres::Template.footerCancellationForm", {"hyphen": "&shy;"}) }}</a>
                     {% endif %}
                    <br><a href="{{ urls.legalDisclosure }}">{{ trans("Ceres::Template.footerLegalDisclosure") }}</a>
                     <br><a href="{{ urls.privacyPolicy }}">{{ trans("Ceres::Template.footerPrivacyPolicy", {"hyphen": "&shy;"}) }}</a>
