--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -68,8 +68,10 @@ mail: info@mb-mueller.com<br>
 </form>
 
 <br><br>
-<img src="http://www.beatinternet.de/mueller/img/facebook.png"> <img src="http://www.beatinternet.de/mueller/img/twitter.png">
-
+<img src="http://www.beatinternet.de/mueller/img/facebook.png">   
+<img src="http://www.beatinternet.de/mueller/img/twitter.png">   
+<img src="http://www.beatinternet.de/mueller/img/pinterest.png">   
+<img src="http://www.beatinternet.de/mueller/img/google.png">   
 </div>
                     </div>
                
