--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -41,7 +41,7 @@ mail: info@mb-mueller.com<br>
 </div>
                     </div>
                      <div class="col-xs-12 col-sm-4 text-xs-center">
-                      <div style="text-align: left;"><br><br><br><br>
+                      <div style="text-align: left;"><h3>INFORMATION</h3> <br><br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                          {% autoescape false %}
                     <a href="{{ urls.cancellationRights }}">{{ trans("Ceres::Template.footerCancellationRight", {"hyphen": "&shy;"}) }}</a>
@@ -61,7 +61,7 @@ mail: info@mb-mueller.com<br>
                      <div class="col-xs-12 col-sm-5 text-xs-center">
                       <div style="text-align: left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                     <h3>  Newsletter </h3> <br><br>
+                     <h3>NEWSLETTER</h3> <br><br>
                      
                      <form accept-charset="UTF-8" action="#" autocomplete="off" method="GET" target="_blank">
 	<input name="name" type="text" value="E-Mail" /> <br /> 
