--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -68,10 +68,10 @@ mail: info@mb-mueller.com<br>
 </form>
 
 <br><br>
-<div style="padding:20px;"><img src="http://www.beatinternet.de/mueller/img/facebook.png"></div>
-<div style="padding:20px;"><img src="http://www.beatinternet.de/mueller/img/twitter.png"></div>
-<div style="padding:20px;"><img src="http://www.beatinternet.de/mueller/img/pinterest.png"></div>
-<div style="padding:20px;"><img src="http://www.beatinternet.de/mueller/img/google.png"></div>
+<div style="padding:10px;float:left;width:25%;"><img src="http://www.beatinternet.de/mueller/img/facebook.png"></div>
+<div style="padding:10px;float:left;width:25%;"><img src="http://www.beatinternet.de/mueller/img/twitter.png"></div>
+<div style="padding:10px;float:left;width:25%;"><img src="http://www.beatinternet.de/mueller/img/pinterest.png"></div>
+<div style="padding:10px;float:left;width:25%;"><img src="http://www.beatinternet.de/mueller/img/google.png"></div>
 </div>
                     </div>
                
