--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -77,14 +77,14 @@ mail: info@mb-mueller.com<br>
                
             </div>
         </div>
-      <div style="2px;"></div>
+      <div style="height:2px;"></div>
  
            <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
                     <div class="col-xs-12 col-sm-9 text-xs-center" style="text-align:left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
-                       <div style="text-align: left;"><b>Copyright MB-Müller 2019</b></div>
+                       <div style="text-align: left;"><b>Copyright &copy; 2019 MBMüller</b></div>
                     </div>
                     <div class="col-xs-12 col-sm-3 text-xs-center" style="align-items:right;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
